--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -7,6 +7,31 @@
   height: 100vh;
 
   & .question {
+    border: 2px dashed white;
+    padding: 16px;
+    width: 400px;
+    height: 100px;
+    margin-bottom: 16px;
     color: white;
+  }
+
+  & .answer {
+    & input {
+      background: black;
+      border: 2px solid white;
+      padding: 4px;
+      color: white;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    & button {
+      background: black;
+      color: white;
+      border: 2px solid white;
+      padding: 4px;
+    }
   }
 }
