--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -39,6 +39,10 @@
       border: 2px solid white;
       padding: 4px;
       font-family: monospace;
+
+      &:disabled {
+        opacity: 0.5;
+      }
     }
   }
 }
