--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+  <htt-toolbar></htt-toolbar>
   <htt-scoreboard></htt-scoreboard>
   <div class="card">
     <div class="question">
