🔧 Added logic for showing and hiding the scoreboard; 🔧 Added test reset logic;

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <htt-toolbar></htt-toolbar>
-  <htt-scoreboard></htt-scoreboard>
+  <htt-scoreboard *ngIf="showStatistics"></htt-scoreboard>
   <div class="card">
     <div class="question">
       {{ tags[questionOrder[questionNumber]].question.ru }}
