🔧 Added display of a dialog box to confirm test reset

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -11,3 +11,12 @@
     </div>
   </div>
 </div>
+
+
+<ng-container #resetDialog>
+  <htt-dialog
+    [answer]="resetDialogs.answer"
+    [agreeLabel]="resetDialogs.agreeLabel"
+    [disagreeLabel]="resetDialogs.disagreeLabel"
+  ></htt-dialog>
+</ng-container>
