🔧 Added dialog box logic for test reset

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -13,10 +13,11 @@
 </div>
 
 
-<ng-container #resetDialog>
-  <htt-dialog
-    [answer]="resetDialogs.answer"
-    [agreeLabel]="resetDialogs.agreeLabel"
-    [disagreeLabel]="resetDialogs.disagreeLabel"
-  ></htt-dialog>
-</ng-container>
+<!--<ng-container #resetDialog>-->
+<!--  <htt-dialog-->
+<!--    *ngIf="resetDialogs"-->
+<!--    [answer]="resetDialogs.answer"-->
+<!--    [agreeLabel]="resetDialogs.agreeLabel"-->
+<!--    [disagreeLabel]="resetDialogs.disagreeLabel"-->
+<!--  ></htt-dialog>-->
+<!--</ng-container>-->
