--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -1,14 +1,14 @@
 @import "src/app/shared/styles/mixins";
 
 .wrapper {
-  @include flex-center;
+  //@include flex-center;
 
-  position: absolute;
-  left: 0;
-  top: 0;
+  //position: absolute;
+  //left: 0;
+  //top: 0;
   color: white;
-  width: 100vw;
-  height: 100vh;
+  //width: 100vw;
+  //height: 100vh;
   background-color: black;
   font-family: monospace;
 
