--- a/src/app/components/scoreboard/scoreboard.component.html
+++ b/src/app/components/scoreboard/scoreboard.component.html
@@ -1,11 +1,11 @@
 <div class="scoreboard">
   <div class="score">
     <span>Верно</span>
-    {{ rightAnswers }}
+    {{ correctAnswerCounter }}
   </div>
   <div class="delimiter"></div>
   <div class="score">
-    {{ wrongAnswers }}
+    {{ incorrecAnswerCounter }}
     <span>Не верно</span>
   </div>
 </div>
