--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,29 +9,29 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$html-tag-test-primary: mat.define-palette(mat.$indigo-palette);
-$html-tag-test-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$html-tag-test-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$html-tag-test-theme: mat.define-light-theme((
-  color: (
-    primary: $html-tag-test-primary,
-    accent: $html-tag-test-accent,
-    warn: $html-tag-test-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($html-tag-test-theme);
+//// Define the palettes for your theme using the Material Design palettes available in palette.scss
+//// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+//// hue. Available color palettes: https://material.io/design/color/
+//$html-tag-test-primary: mat.define-palette(mat.$indigo-palette);
+//$html-tag-test-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+//
+//// The warn palette is optional (defaults to red).
+//$html-tag-test-warn: mat.define-palette(mat.$red-palette);
+//
+//// Create the theme object. A theme consists of configurations for individual
+//// theming systems such as "color" or "typography".
+//$html-tag-test-theme: mat.define-light-theme((
+//  color: (
+//    primary: $html-tag-test-primary,
+//    accent: $html-tag-test-accent,
+//    warn: $html-tag-test-warn,
+//  )
+//));
+//
+//// Include theme styles for core and each component used in your app.
+//// Alternatively, you can import and @include the theme mixins for each component
+//// that you are using.
+//@include mat.all-component-themes($html-tag-test-theme);
 
 @import "src/app/shared/styles/colors";
 
@@ -46,5 +46,11 @@ body {
   background-color: $black;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.dialog-panel {
+  & .mat-mdc-dialog-container .mdc-dialog__surface {
+    border-radius: 0;
+  }
+}
+
+//html, body { height: 100%; }
+//body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
