--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <div class="toolbar">
   <div class="btn" (click)="toggleShowStatistics()">
-    <img src="./assets/images/statistics.svg">
+    <img src="./assets/images/statistics.svg" alt="statistics">
   </div>
   <div class="btn" (click)="resetTest()">
-    <img src="./assets/images/reboot.svg">
+    <img src="./assets/images/reboot.svg" alt="reboot">
   </div>
 </div>
