--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -6,14 +6,13 @@
   position: absolute;
   left: 0;
   top: 0;
-  color: white;
   width: 100vw;
   height: 100vh;
   background-color: black;
-  font-family: monospace;
 
   & .dialog {
-    border: 2px solid white;
+    @include default-border;
+
     width: 300px;
     padding: 16px;
     box-sizing: border-box;
@@ -33,11 +32,10 @@
       justify-content: space-around;
 
       & button {
+        @include default-border;
+
         background: black;
-        color: white;
-        border: 2px solid white;
         padding: 4px;
-        font-family: monospace;
         width: 100px;
         cursor: pointer;
       }
