--- a/src/app/components/scoreboard/scoreboard.component.scss
+++ b/src/app/components/scoreboard/scoreboard.component.scss
@@ -1,19 +1,18 @@
+@import "src/app/shared/styles/mixins";
+
 .scoreboard {
-  color: white;
-  border: 2px solid white;
+  @include default-border;
+
   width: 435px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  font-family: monospace;
   align-items: center;
 
   & .score {
     width: calc(50% - 1px);
 
-    & span {
-      color: white;
-    }
+    & span {}
 
     &:first-child {
       padding-left: 16px;
