--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,15 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
-  font-family: monospace;
 }
 
-body, button, span {
+body, button, span, input {
+  font-family: monospace;
   color: white;
+}
+
+input, button {
+  &:focus, &:focus-visible {
+    outline: none;
+  }
 }
