--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,11 @@
 <div class="toolbar">
-  <div class="btn" (click)="toggleShowStatistics()">
+  <div class="icon-btn" (click)="backToMainMenu()">
+    <img src="./assets/images/back.svg" alt="back">
+  </div>
+  <div class="icon-btn" (click)="toggleShowStatistics()">
     <img src="./assets/images/statistics.svg" alt="statistics">
   </div>
-  <div class="btn" (click)="resetTest()">
+  <div class="icon-btn" (click)="resetTest()">
     <img src="./assets/images/reboot.svg" alt="reboot">
   </div>
 </div>
