--- a/src/app/components/scoreboard/scoreboard.component.html
+++ b/src/app/components/scoreboard/scoreboard.component.html
@@ -1,11 +1,11 @@
 <div class="scoreboard">
   <div class="score">
     <span>Всего вопросов: </span>
-    {{ totalQuestionsCount }}
+    {{ totalQuestionsCounter }}
   </div>
   <div class="score">
     <span>Осталось вопросов: </span>
-    {{ questionsLeftCount }}
+    {{ questionsLeftCounter }}
   </div>
   <div class="score correct">
     <span>Верно: </span>
@@ -17,6 +17,6 @@
   </div>
   <div class="score">
     <span>Пропущено: </span>
-    {{ skippedQuestionsCount }}
+    {{ skippedQuestionsCounter }}
   </div>
 </div>
