--- a/src/app/components/dictionary/dictionary.component.html
+++ b/src/app/components/dictionary/dictionary.component.html
@@ -1,1 +1,15 @@
-<p>dictionary works!</p>
+<div class="dictionary">
+  <div class="search">
+    <div class="back" (click)="backToMainMenu()">
+      <svg-icon src="./assets/images/back.svg" [class]="'back'"></svg-icon>
+    </div>
+    <input type="text" placeholder="Filter" #filter [(ngModel)]="searchTag" (ngModelChange)="search()">
+    <div class="clear" (click)="clear()">
+      <svg-icon src="./assets/images/close.svg" [class]="'clear-icon'"></svg-icon>
+    </div>
+  </div>
+  <div class="tags">
+    <div class="tag" [class.selected]="tagName === selectedTag" *ngFor="let tagName of tagNames" (click)="selectTag(tagName)">{{ tagName }}</div>
+  </div>
+  <div class="description"><span>{{ selectedTag }}</span>{{ description ? ' — ' : '' }}{{ description }}</div>
+</div>
