--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@ body, button, span, input {
 }
 
 input, button {
+  background-color: $black;
+
   &:focus, &:focus-visible {
     outline: none;
   }
