🔧 Added logic and display for the test results page

--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,1 +1,57 @@
-<p>result works!</p>
+<div class="result">
+  <div class="statistics" *ngIf="statistics">
+    <div class="right-answers"
+         [class.selected]="selected === testResultCategories.RightAnswers"
+         (click)="select(testResultCategories.RightAnswers)"
+    >
+      <div class="count">{{ statistics.rightAnswers }}</div>
+      <div class="label">Правильные ответы</div>
+    </div>
+    <div class="wrong-answers"
+         [class.selected]="selected === testResultCategories.WrongAnswers"
+         (click)="select(testResultCategories.WrongAnswers)"
+    >
+      <div class="count">{{ statistics.wrongAnswers }}</div>
+      <div class="label">Не правильные ответы</div>
+    </div>
+    <div class="skipped-answers"
+         [class.selected]="selected === testResultCategories.SkippedAnswers"
+         (click)="select(testResultCategories.SkippedAnswers)"
+    >
+      <div class="count">{{ statistics.skippedQuestions }}</div>
+      <div class="label">Пропущенные вопросы</div>
+    </div>
+    <div class="total-questions"
+         [class.selected]="selected === testResultCategories.TotalQuestions"
+         (click)="select(testResultCategories.TotalQuestions)"
+    >
+      <div class="count">{{ statistics.totalQuestions }}</div>
+      <div class="label">Всего вопросов</div>
+    </div>
+  </div>
+  <div class="answers">
+    <div class="answer"
+         *ngFor="let answer of answers"
+         [class.right]="answer.userAnswer === answer.trueAnswer"
+         [class.wrong]="answer.userAnswer !== answer.trueAnswer && answer.userAnswer !== ''"
+         [class.skipped]="answer.userAnswer === ''">
+      <div class="question">
+        <span>Вопрос:</span><br/>
+        {{ answer.question['ru'] }}
+      </div>
+      <div class="user-answer">
+        <span>Ваш ответ:</span><br/>
+        {{ answer.userAnswer }}
+      </div>
+      <div class="true-answer">
+        <span>Правильный ответ:</span><br/>
+        {{ answer.trueAnswer }}
+      </div>
+      <div class="indicator icon-btn">
+        <svg-icon src="./assets/images/check.svg" *ngIf="answer.userAnswer === answer.trueAnswer"></svg-icon>
+        <svg-icon src="./assets/images/close.svg" *ngIf="answer.userAnswer !== answer.trueAnswer && answer.userAnswer !== ''"></svg-icon>
+        <svg-icon src="./assets/images/skip.svg" *ngIf="answer.userAnswer === ''"></svg-icon>
+      </div>
+    </div>
+  </div>
+</div>
