--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,4 +1,9 @@
 <div class="result">
+  <div class="toolbar">
+    <div class="icon-btn" (click)="backToMainMenu()">
+      <img src="./assets/images/back.svg" alt="back">
+    </div>
+  </div>
   <div class="statistics" *ngIf="statistics">
     <div class="right-answers"
          [class.selected]="selected === testResultCategories.RightAnswers"
