--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -6,7 +6,7 @@
   justify-content: right;
   gap: 8px;
 
-  & .icon-btn:first-child {
+  & htt-icon-btn:first-child {
     margin-right: auto;
   }
 }
