--- a/src/app/components/scoreboard/scoreboard.component.html
+++ b/src/app/components/scoreboard/scoreboard.component.html
@@ -1,22 +1,6 @@
 <div class="scoreboard">
-  <div class="score">
-    <span>Всего вопросов: </span>
-    {{ totalQuestionsCounter }}
-  </div>
-  <div class="score">
-    <span>Осталось вопросов: </span>
-    {{ questionsLeftCounter }}
-  </div>
-  <div class="score correct">
-    <span>Верно: </span>
-    {{ correctAnswerCounter }}
-  </div>
-  <div class="score incorrect">
-    <span>Не верно: </span>
-    {{ incorrectAnswerCounter }}
-  </div>
-  <div class="score">
-    <span>Пропущено: </span>
-    {{ skippedQuestionsCounter }}
+  <div class="score {{ counters[key].className }}" *ngFor="let key of counterKeys">
+    <span>{{ counters[key].name }}: </span>
+    {{ counters[key].value }}
   </div>
 </div>
