--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,12 +1,6 @@
 <div class="toolbar">
-  <div class="icon-btn" (click)="backToMainMenu()">
-    <img src="./assets/images/back.svg" alt="back">
-  </div>
+  <htt-icon-btn src="./assets/images/back.svg" (click)="backToMainMenu()"></htt-icon-btn>
   <ng-content></ng-content>
-  <div class="icon-btn" *ngIf="showStatisticsBtn" (click)="toggleShowStatistics()">
-    <img src="./assets/images/statistics.svg" alt="statistics">
-  </div>
-  <div class="icon-btn" *ngIf="resetTestBtn" (click)="resetTest()">
-    <img src="./assets/images/reboot.svg" alt="reboot">
-  </div>
+  <htt-icon-btn src="./assets/images/statistics.svg" *ngIf="showStatisticsBtn" (click)="toggleShowStatistics()"></htt-icon-btn>
+  <htt-icon-btn src="./assets/images/reboot.svg" *ngIf="resetTestBtn" (click)="resetTest()"></htt-icon-btn>
 </div>
