--- a/src/app/components/pages/dictionary/dictionary.component.scss
+++ b/src/app/components/pages/dictionary/dictionary.component.scss
@@ -2,9 +2,9 @@
 @import "../../../shared/styles/colors";
 
 .dictionary {
+  @include flex-gap;
   display: flex;
   flex-direction: column;
-  gap: 16px;
 
   & .search {
     display: flex;
