--- a/src/app/components/pages/test/test.component.scss
+++ b/src/app/components/pages/test/test.component.scss
@@ -1,8 +1,8 @@
 @import "../../../shared/styles/mixins";
 
 .test {
+  @include flex-gap;
   flex-direction: column;
-  gap: 16px;
   display: flex;
 
   & .question {
