--- a/src/app/components/pages/result/result.component.scss
+++ b/src/app/components/pages/result/result.component.scss
@@ -2,10 +2,10 @@
 @import "../../../shared/styles/colors";
 
 .result {
+  @include flex-gap;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
 
   & .toolbar {
     width: 100%;
@@ -18,7 +18,7 @@
 
     & .right-answers, & .wrong-answers, & .skipped-answers, & .total-questions {
       @include default-border;
-      @include card-padding;
+      @include padding__medium;
 
       cursor: pointer;
       user-select: none;
@@ -60,19 +60,19 @@
   }
 
   & .answers {
+    @include flex-gap;
     border: 2px solid white;
     width: 435px;
     overflow: auto;
     height: 400px;
     padding: 16px;
     box-sizing: border-box;
-    gap: 16px;
     display: flex;
     flex-direction: column;
 
     & .answer {
       @include default-border;
-      @include card-padding;
+      @include padding__medium;
 
       display: flex;
       flex-direction: column;
@@ -80,7 +80,7 @@
       position: relative;
 
       & .question, & .user-answer, & .true-answer {
-        @include card-padding;
+        @include padding__medium;
 
         background-color: #333333;
       }
