--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,9 @@
 @import "src/app/shared/styles/mixins";
 
 body {
+  @include fullscreen;
+
   background-color: $black;
-  height: 100vh;
-  width: 100vw;
   margin: 0;
 }
 
@@ -14,7 +14,8 @@ body, button, span, input {
 }
 
 input, button {
-  background-color: $black;
+  @include btn-cursor;
+  @include default-background;
 
   &:focus, &:focus-visible {
     outline: none;
