--- a/src/app/components/pages/dictionary/dictionary.component.scss
+++ b/src/app/components/pages/dictionary/dictionary.component.scss
@@ -6,89 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  & .search {
-    & .back {
-      @include default-border;
-      @include flex-center;
-
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-    }
-
-    & .clear {
-      @include default-border;
-      @include flex-center;
-
-      width: 24px;
-      height: 24px;
-      cursor: pointer;
-
-      & .clear-icon {
-        width: 16px;
-        height: 16px;
-        padding: 4px;
-
-        & svg {
-          display: block;
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      &:hover {
-        border-color: $crayola;
-        & .clear-icon {
-          & svg {
-            & g {
-              fill: $crayola;
-            }
-          }
-        }
-      }
-    }
-
-    & input {
-      @include default-border;
-
-      width: 100%;
-      padding: 0 4px;
-    }
-  }
-
-  & .tags {
-    display: flex;
-    max-width: 435px;
-    gap: 8px;
-    flex-wrap: wrap;
-
-    & .tag {
-      @include flex-center;
-      @include default-border;
-
-      padding: 4px;
-      width: auto;
-      cursor: pointer;
-      height: 27px;
-      box-sizing: border-box;
-
-      &:hover, &.selected {
-        border-color: $crayola;
-        color: $crayola;
-      }
-    }
-  }
-
-  & .description {
-    @include dashed-border;
-
-    width: 435px;
-    height: 125px;
-    padding: 16px;
-    box-sizing: border-box;
-
-    & span {
-      color: $crayola;
-    }
+  & htt-search {
+    width: 100%;
   }
 }
