--- a/src/app/components/pages/test/test.component.html
+++ b/src/app/components/pages/test/test.component.html
@@ -1,6 +1,6 @@
 <div class="test">
   <htt-toolbar [showStatisticsBtn]="true" [resetTestBtn]="true" (back)="backToMainMenu()"></htt-toolbar>
-  <htt-scoreboard *ngIf="showStatistics"></htt-scoreboard>
+  <htt-scoreboard></htt-scoreboard>
   <div class="card">
     <div class="description">
       {{ tags[questionOrder[questionNumber]].question.ru }}
@@ -12,7 +12,7 @@
              (keyup.enter)="answer(answerInput)"
              placeholder="Write answer">
       <button (click)="answer(answerInput)" [disabled]="!answerInput">Answer</button>
-      <htt-icon-btn src="../../../../assets/images/skip.svg" (click)="skipQuestion()"></htt-icon-btn>
+      <htt-icon-btn src="./assets/images/skip.svg" (click)="skipQuestion()"></htt-icon-btn>
     </div>
   </div>
 </div>
