🌍 Added translation logic

--- a/src/app/components/pages/main-manu/main-manu.component.html
+++ b/src/app/components/pages/main-manu/main-manu.component.html
@@ -4,7 +4,7 @@
       <svg-icon [src]="item.icon" [class]="'svg'"></svg-icon>
     </div>
     <div class="text">
-      {{ item.label }}
+      {{ item.label | translate }}
     </div>
   </div>
 </div>
