--- a/src/app/components/pages/result/answer-list/answer-list.component.scss
+++ b/src/app/components/pages/result/answer-list/answer-list.component.scss
@@ -2,7 +2,7 @@
 @import "./src/app/shared/styles/colors";
 
 .answers {
-  @include flex-gap;
+  @include flex-gap__medium;
   border: 2px solid white;
   width: 435px;
   overflow: auto;
