--- a/src/app/components/pages/main-manu/main-manu.component.scss
+++ b/src/app/components/pages/main-manu/main-manu.component.scss
@@ -1,7 +1,7 @@
 @import "../../../shared/styles/mixins";
 
 .menu {
-  @include flex-gap;
+  @include flex-gap__medium;
   display: flex;
   flex-direction: column;
   width: 300px;
