--- a/src/app/components/pages/result/result.component.scss
+++ b/src/app/components/pages/result/result.component.scss
@@ -2,7 +2,7 @@
 @import "../../../shared/styles/colors";
 
 .result {
-  @include flex-gap;
+  @include flex-gap__medium;
   display: flex;
   flex-direction: column;
   align-items: center;
