--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+  <htt-icon-btn src="./assets/images/language.svg" (click)="changeLanguage()"></htt-icon-btn>
   <router-outlet></router-outlet>
 </div>
 
