--- a/src/app/components/language/language.component.scss
+++ b/src/app/components/language/language.component.scss
@@ -1,11 +1,23 @@
-@import "./src/app/shared/styles/mixins";
-@import "./src/app/shared/styles/colors";
+@import "../../shared/styles/mixins";
+@import "../../shared/styles/colors";
 
 .languages {
+  @include flex-center;
+  @include default-background;
+  @include fullscreen;
   @include flex-gap__small;
+
+  position: absolute;
+  top: 0;
 
   display: flex;
   flex-direction: column;
+
+  & .toolbar {
+    display: flex;
+    justify-content: right;
+    width: 140px;
+  }
 
   & .language {
     @include btn-cursor;
