--- a/src/app/components/pages/test/test.component.html
+++ b/src/app/components/pages/test/test.component.html
@@ -1,6 +1,6 @@
 <div class="test">
   <htt-toolbar [showStatisticsBtn]="true" [resetTestBtn]="true" (back)="backToMainMenu()"></htt-toolbar>
-  <htt-scoreboard></htt-scoreboard>
+  <htt-scoreboard *ngIf="showStatistics"></htt-scoreboard>
   <div class="card">
     <div class="description">
       {{ tags[questionOrder[questionNumber]].question.ru }}
