--- a/src/app/components/pages/result/statistic-tabs/statistic-tabs.component.html
+++ b/src/app/components/pages/result/statistic-tabs/statistic-tabs.component.html
@@ -4,6 +4,6 @@
        (click)="select(tab.name)"
   >
     <div class="count">{{ statistics[tab.statKey] }}</div>
-    <div class="label">{{ tab.label }}</div>
+    <div class="label">{{ tab.label | translate }}</div>
   </div>
 </div>
