--- a/src/app/components/pages/test/test.component.html
+++ b/src/app/components/pages/test/test.component.html
@@ -10,8 +10,8 @@
              #input
              [(ngModel)]="answerInput"
              (keyup.enter)="answer(answerInput)"
-             placeholder="Write answer">
-      <button (click)="answer(answerInput)" [disabled]="!answerInput">Answer</button>
+             [placeholder]="'input.write-answer' | translate">
+      <button (click)="answer(answerInput)" [disabled]="!answerInput">{{ 'btn.answer' | translate }}</button>
       <htt-icon-btn src="./assets/images/skip.svg" (click)="skipQuestion()"></htt-icon-btn>
     </div>
   </div>
