--- a/src/app/components/pages/dictionary/search/search.component.html
+++ b/src/app/components/pages/dictionary/search/search.component.html
@@ -1,4 +1,8 @@
 <div class="search">
-  <input type="text" [placeholder]="'input.filter' | translate" #filter [(ngModel)]="searchTag" (ngModelChange)="search()">
+  <input type="text"
+         #filter
+         [placeholder]="'input.filter' | translate"
+         [(ngModel)]="searchTag"
+         (ngModelChange)="search()">
   <htt-icon-btn src="./assets/images/close.svg" [hover]="true" (click)="clear()"></htt-icon-btn>
 </div>
