--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <div class="dialog">
-    <div class="answer">{{ answer }}</div>
+    <div class="answer">{{ answer | translate }}</div>
     <div class="btn-wrapper">
-      <button (click)="agreeEmit()">{{ agreeLabel }}</button>
-      <button (click)="disagreeEmit()">{{ disagreeLabel }}</button>
+      <button (click)="agreeEmit()">{{ agreeLabel | translate }}</button>
+      <button (click)="disagreeEmit()">{{ disagreeLabel | translate }}</button>
     </div>
   </div>
 </div>
