--- a/src/app/components/pages/test/test.component.scss
+++ b/src/app/components/pages/test/test.component.scss
@@ -15,16 +15,8 @@
     display: flex;
     gap: 8px;
 
-    & input {
-      @include default-border;
-
-      flex: 1;
-      background: black;
-      padding: 4px;
-
-      &:focus {
-        outline: none;
-      }
+    & htt-test-input {
+      width: 100%;
     }
 
     & button {
